fix tag label issue when there is too much of them

--- a/static/css/tasks.css
+++ b/static/css/tasks.css
@@ -29,6 +29,10 @@ div.task {
     border: solid 2px #FAFAFA;
 }
 
+div.tags .label{
+    display: inline-block;
+}
+
 div.tags a:focus, div.tags a:hover {
     text-decoration: none;
 }
